# cdbs-app

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  cfg.toml  index.html  index.scss  package.json  playwright.config.js  trunk.toml
assets/cdn/three/: OrbitControls.js  STLLoader.js  lil-gui.js  stats.module.js
assets/css/: global.scss  inedx.css  lil-gui-theme.css  lil-gui.min.css  upload-styles.css
assets/js/: OrbitControls.js  STLLoader.js  clipboard.js  clipboard.min.js  clipboard2.js  greatviewer-ifc.js  greatviewer.js  lil-gui.js  stats.module.js  three.module.js
assets/js/three/: BufferGeometryUtils.js  DRACOLoader.js  GCodeLoader.js  GLTFLoader.js  OrbitControls.js  STLLoader.js  lil-gui.esm.min.js  three.module.js
data/: introspectionSchema.json
graphql/: backup.graphql  companies.graphql  components.graphql  discussions.graphql  register.graphql  relate.graphql  schema.graphql  service.graphql  specs.graphql  standards.graphql  user.graphql
src/: app.rs  error.rs  generator.rs  global.scss  main.rs  switch.rs
src/components/: footer.rs  header.rs  pagination.rs
src/fragments/: add_certificate.rs  article_list.rs  author_card.rs  buttons.rs  certificate.rs  clipboard.rs  company_add_certificate.rs  company_add_represent.rs  company_certificate.rs  conditions.rs  delete_card.rs  discussion.rs  file_showcase.rs  files_frame.rs  footer.rs  header.rs  img_showcase.rs  list_empty.rs  list_errors.rs  list_item.rs  list_pagination.rs  markdown_edit.rs  mod.rs  modal.rs  notification.rs  paginate.rs  pagination.rs  post_card.rs  progress_delay.rs  responsive.rs  search_bar.rs  side_menu.rs  switch_icon.rs  three_showcase.rs  type_access.rs  upload_favicon.rs  user_add_certificate.rs  user_certificate.rs
src/fragments/catalog_company/: index.scss  list_item.rs  mod.rs
src/fragments/catalog_component/: index.scss  list_item.rs  mod.rs
src/fragments/catalog_standard/: index.scss  list_item.rs  mod.rs
src/fragments/catalog_user/: index.scss  list_item.rs  mod.rs
src/fragments/company/: menu_block.rs  mod.rs
src/fragments/company_represent/: change_item.rs  index.scss  list_item.rs  mod.rs
src/fragments/component/: company_item.rs  mod.rs  standard_item.rs  update_favicon.rs
src/fragments/component_file/: item.rs  mod.rs
src/fragments/component_keyword/: add.rs  item.rs  mod.rs
src/fragments/component_modification/: edit.rs  fileset.rs  fileset_item.rs  heads.rs  item.rs  item_module.rs  mod.rs
src/fragments/component_spec/: item.rs  mod.rs  search.rs
src/fragments/file/: item.rs  mod.rs
src/fragments/search/: catalog_spec.rs  mod.rs  search_bar.rs
src/fragments/search_spec/: item.rs  mod.rs
src/fragments/spec/: item.rs  mod.rs
src/fragments/standard/: mod.rs  update_favicon.rs
src/fragments/standard_file/: item.rs  mod.rs
src/fragments/standard_keyword/: add.rs  item.rs  mod.rs
src/fragments/standard_spec/: item.rs  mod.rs  search.rs
src/fragments/supplier_service/: mod.rs  service_request.rs
src/fragments/user/: go_to_user.rs  mod.rs  modal_card.rs  upload_favicon.rs
src/gqls/: company.rs  component.rs  discussion.rs  mod.rs  query.rs  relate.rs  standard.rs  supplier_service.rs  user.rs
src/gqls/query_structs/: components.rs
src/pages/: about_us.rs  home.rs  mod.rs
src/routes/: editor.rs  login.rs  mod.rs  notification.rs  profile.rs  register.rs  settings.rs
src/routes/article/: comment.rs  comment_input.rs  comment_list.rs  mod.rs
src/routes/catalog/: boxItem.rs  index.scss  listItem.rs  list_item.rs  mod.rs
src/routes/company/: create.rs  create_company.rs  mod.rs  settings.rs  show.rs  supplier.rs
src/routes/component/: create.rs  index.scss  mod.rs  settings.rs  show.rs
src/routes/createTender/: index.scss  item.rs  mod.rs
src/routes/create_tender/: mod.rs
src/routes/home/: banner.rs  main_view.rs  mod.rs  search_page.rs  tags.rs
src/routes/standard/: create.rs  index.scss  mod.rs  settings.rs  show.rs
src/routes/supplier_service/: create.rs  mod.rs  settings.rs  show.rs
src/routes/tender/: item.rs  mod.rs
src/routes/tenders/: mod.rs
src/routes/user/: login.rs  mod.rs  notification.rs  profile.rs  register.rs  settings.rs
src/services/: articles.rs  auth.rs  clipboard.rs  content_adapter.rs  filesize.rs  focuser.rs  local_storage.rs  mod.rs  preview_model.rs  register.rs  requests.rs  response_parsing.rs  server_location.rs  set_classes.rs  storage_upload.rs  subscribers.rs  tags.rs  title_changer.rs  upload_file.rs  util.rs
src/types/: auth.rs  company.rs  component.rs  discussion.rs  file.rs  mod.rs  profiles.rs  relate.rs  standard.rs  supplier_service.rs
src/utils/: log.rs
tests/: login_test.js  profile_test.js  register_test.js  setting_test.js  slogan.spec.js
(+124 files in other folders)
