[package]
authors = ["mnnxp <mananaxep@gmail.com>"]
edition = "2018"
name = "cdbs-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# You should include "rlib" (the default crate type) otherwise your crate can't be used as a Rust library
# which, among other things, breaks unit testing
# crate-type = ["rlib", "cdylib"]

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
yewtil = "0.4.0"

console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

getrandom = {version = "0.2.8", features = ["js"]}
instant = {version = "0.1.12", features = ["wasm-bindgen"]}
lipsum = "0.8.2"
rand = "0.8.5"
regex = "1.7.0"

chrono = {version = "0.4.23", features = ["serde"]}
log = "0.4.17"
parking_lot = "0.12.1"
pulldown-cmark = "0.9.2"
thiserror = "1.0.37"

anyhow = "1.0.66"
graphql_client = "0.11.0"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.88"

dotenv_codegen = "0.15.0"

lazy_static = "1.4.0"
toml = "0.5.9"

[dependencies.web-sys]
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "DragEvent",
  "DataTransfer",
  "File",
  "FileList",
]
version = "0.3.60"

[dev-dependencies]
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen-test = "0.3.33"
