[package]
authors = ["mnnxp <mananaxep@gmail.com>"]
edition = "2018"
name = "cdbs-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# You should include "rlib" (the default crate type) otherwise your crate can't be used as a Rust library
# which, among other things, breaks unit testing
# crate-type = ["rlib", "cdylib"]

[dependencies]
yew = "0.18.0"
yew-router = "0.15.0"
yewtil = "0.3.2"

# console_error_panic_hook = "0.1.6"
# wasm-bindgen = "0.2.74"
# wasm-bindgen-futures = "0.4.24"
# wasm-logger = "0.2"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
js-sys = "0.3.60"

getrandom = {version = "0.2", features = ["js"]}
instant = {version = "0.1", features = ["wasm-bindgen"]}
lipsum = "0.7"
rand = {version = "0.7", features = ["small_rng", "wasm-bindgen"]}
regex = "1.5.4"

chrono = {version = "0.4.10", features = ["serde"]}
log = "0.4.8"
parking_lot = "0.10.0"
pulldown-cmark = "0.9.6"
thiserror = "1"

anyhow = "1.0.41"
graphql_client = "0.10.0"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"

dotenv_codegen = "0.15.0"

lazy_static = "1.4.0"
toml = "0.5.8"

[dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlCanvasElement",
  "DragEvent",
  "DataTransfer",
  "File",
  "FileList",
  "TextMetrics",
]
version = "0.3.60"

[dev-dependencies]
wasm-bindgen-futures = "0.4.10"
wasm-bindgen-test = "0.3.10"
